@@ -24,7 +24,6 @@ import java.io.IOException;
 import java.io.StringReader;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.HashMap;
@@ -341,7 +340,7 @@ public final class InlineConfigParser {
                                                 boolean setFilteredViolations) throws Exception {
         final TestInputConfiguration.Builder testInputConfigBuilder =
                 new TestInputConfiguration.Builder();
-        final Path filePath = Paths.get(inputFilePath);
+        final Path filePath = Path.of(inputFilePath);
         final List<String> lines = readFile(filePath);
         try {
             setModules(testInputConfigBuilder, inputFilePath, lines);
@@ -363,7 +362,7 @@ public final class InlineConfigParser {
             throws Exception {
         final TestInputConfiguration.Builder testInputConfigBuilder =
                 new TestInputConfiguration.Builder();
-        final Path filePath = Paths.get(inputFilePath);
+        final Path filePath = Path.of(inputFilePath);
         final List<String> lines = readFile(filePath);
 
         try {
@@ -392,7 +391,7 @@ public final class InlineConfigParser {
     public static TestInputConfiguration parseWithXmlHeader(String inputFilePath)
             throws Exception {
 
-        final Path filePath = Paths.get(inputFilePath);
+        final Path filePath = Path.of(inputFilePath);
         final List<String> lines = readFile(filePath);
         if (!checkIsXmlConfig(lines)) {
             throw new CheckstyleException("Config cannot be parsed as xml.");
